# cuda-pybind-matrix-multiplication

./: .gitignore  README.md
backups/: backup v2 (execution time, synchronization).txt  backup v3 (shared memory fails).txt  backup v4 (cuda runs, pybind builds, pybind doesnt run, dependency issue).txt  backup.txt
final_submission/2) Source Code/Python2Cuda_example/Python2Cuda_example/src/: CMakeLists.txt
final_submission/2) Source Code/Python2Cuda_example/Python2Cuda_example/src/pybind11_cpp_examples/: CmakeLists.txt  pybind11_add.cpp  pybind11_export.cpp
final_submission/2) Source Code/final project/final_project/cuda_bind_project/Src/cuda_bind/: CMakeLists.txt
src/Python2Cuda_example/src/pybind11_cpp_examples/: pybind11_class.cpp  pybind11_madd.cpp
src/Python2Cuda_example/src/pybind11_cuda_examples/: madd.cu  pybind11_madd.cpp
src/cuda_bind_project/: CMakeLists.txt  test.py
src/cuda_bind_project/Src/: CMakeLists.txt
src/cuda_bind_project/Src/cuda_bind/: cuda_bind.cu
